--- a/_includes/assets/css/home-page.css
+++ b/_includes/assets/css/home-page.css
@@ -30,13 +30,6 @@
     background-color: var(--color-bg-accent);
     z-index: -1;
   }
-  .hero__image {
-    border-radius: var(--border-radius);
-    transition: filter 0.4s ease-out;
-    background: var(--color-secondary);
-    width: 50vh;
-    height: 100%;
-  }
 }
 
 .hero {
@@ -47,6 +40,18 @@
   grid-column-gap: 70px;
   max-width: 1100px;
   margin: 0 auto;
+}
+
+.hero__image {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .hero__image {
+    display: block;
+    max-width: 80%;
+    border-radius: var(--border-radius);
+  }
 }
 
 @media (min-width: 1024px) {
